# Volatility-Trading-Project--Dispersion-Strategies

./: README.md  README_FR.md  pyproject.toml  requirements.txt  test_bt.py
investment_lab/: __init__.py  dataclass.py
investment_lab/dispersion/: __init__.py  greek_sizing.py
notebooks/: 01_data_exploration.ipynb  02_dispersion_backtest.ipynb  02_single_leg_delta_hedging.ipynb  03_dispersion_backtest.ipynb  Dispersion_Backtest_ Project copy.ipynb  Dispersion_Backtest_ Project.ipynb
src/: __init__.py  constants.py  rates.py  specs.py  util.py
src/data/: data_loader.py  option_db.py  rates_db.py
src/dispersion/: __init__.py  dispersion_trade.py  dynamic_allocation.py  greek_sizing.py  robustness.py  signal_analysis.py
src/dispersion_trading/: __init__.py  rates.py  specs.py
src/dispersion_trading/data/: data_loader.py  option_db.py  rates_db.py
src/dispersion_trading/dispersion/: __init__.py
src/dispersion_trading/metrics/: performance.py  volatility.py
src/dispersion_trading/pricing/: implied_volatility.py
src/dispersion_trading/stochastic/: geometric_brownian_motion.py
src/dispersion_trading/surface/: base.py  sabr.py  ssvi.py  svi.py
src/dispersion_trading/trading/: backtest.py  option_trade.py  selection.py  strategies.py
src/metrics/: __init__.py  performance.py  volatility.py
src/pricing/: black_scholes.py  implied_volatility.py
src/stochastic/: geometric_brownian_motion.py
src/surface/: base.py  sabr.py  ssvi.py  svi.py
src/trading/: backtest.py  option_trade.py  selection.py  strategies.py
