[project]
name = "vol-dispersion"
version = "0.1.0"
authors = [
  { name="Mariuscalaque" },
]
description = "Dispersion trading strategies: theta/gamma/vega-neutral long dispersion on SPY/AAPL"
readme = "README.md"
requires-python = ">=3.10"

license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["data*", "notebooks*", "lectures*", "tests*"]
